# In_Falsus_Editor

./: .gitignore  Cargo.toml  In Falsus Editor.desktop  build.rs  build_android_apk.bat
.github/workflows/: release.yml
docs/: optimization-tracker.md
i18n/: en-US.json  zh-CN.json
src/: lib.rs  main.rs  settings.rs  shortcuts.rs
src/app/: constants.rs  input_handler.rs  menu_actions.rs  mod.rs  project_manager.rs  render_mode.rs  setup.rs  ui_orchestrator.rs
src/audio/: controller.rs  hitsound.rs  mod.rs  player.rs
src/audio/controller/: helpers.rs  methods_private.rs  methods_public.rs  types.rs
src/audio/player/: methods_control.rs  methods_runtime.rs  types.rs
src/chart/: mod.rs
src/chart/codec/: methods_export.rs  methods_parse.rs  types.rs  utils.rs
src/editor/: falling.rs  ground.rs  mod.rs
src/editor/falling/: chart_extract.rs  constants.rs  debug_draw.rs  editor_methods_draw.rs  editor_methods_init.rs  editor_methods_input_air_select.rs  editor_methods_input_box_select.rs  editor_methods_input_collect.rs  editor_methods_input_drag.rs  editor_methods_input_hover_overlap.rs  editor_methods_input_paste.rs  editor_methods_input_seek_ground.rs  editor_methods_internal.rs  editor_methods_minimap_draw.rs  editor_methods_minimap_input.rs  editor_methods_minimap_layout.rs  editor_methods_render_air.rs  editor_methods_render_event_header.rs  editor_methods_render_ground.rs  editor_methods_render_hitbox.rs  editor_methods_render_place_cursor.rs  editor_methods_render_progress_spectrum.rs  editor_methods_render_skyarea_shape.rs  editor_state.rs  hit_math.rs  note_style.rs  note_types.rs  timeline.rs  ui_helpers.rs  waveform.rs
src/editor/ground/: methods_chart_io.rs  methods_core.rs  methods_note_ops.rs  methods_pointer.rs  (+2 more)
src/i18n/: mod.rs
src/socket/: server.rs
src/ui/: audio_debug_window.rs  create_project_window.rs  current_project_window.rs  docs_window.rs  fonts.rs  info_toast.rs  input_state.rs  loading_status.rs  mod.rs  note_panel.rs  open_project_window.rs  progress_bar.rs  scale.rs  settings_window.rs  snap_slider.rs  top_menu.rs
(+6 files in other folders)
