[package]
name = "in_falsus_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
macroquad = { version = "0.4.14", default-features = false }
egui-macroquad = { version = "0.17.3", default-features = false }
sasa = { git = "https://github.com/Mivik/sasa", default-features = false, features = ["cpal"] }
