[package]
name = "in_falsus_editor"
version = "0.1.0"
edition = "2024"

[lib]
name = "in_falsus_editor"
crate-type = ["cdylib", "rlib"]

[package.metadata.android]
assets = "android_assets"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.application]
has_code = true

[package.metadata.android.application.activity]
name = "rust.in_falsus_editor.MainActivity"

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 35

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
macroquad = { version = "0.4.14", default-features = false }
egui-macroquad = { version = "0.17.3", default-features = false }
sasa = { git = "https://github.com/yuhao7370/sasa", rev = "c0f8b8e", default-features = false, features = ["cpal"] }
rustfft = "6"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
