[package]
name = "in_falsus_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
macroquad = { version = "0.4.14", default-features = false }
egui-macroquad = { version = "0.17.3", default-features = false }
sasa = { git = "https://github.com/yuhao7370/sasa", rev = "52c0a45141cca0d9f2dbd2fc0e11bc998e3c5b27", default-features = false, features = ["cpal"] }
rfd = "0.15"
rustfft = "6"
tungstenite = "0.24"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
